[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nite"
version = "0.0.1"
dependencies = [
  "pydantic==2.8.2",
  "opencv-python==4.10.0.84",
  "PyAudio==0.2.14",
  "librosa==0.10.2.post1",
  "hatch==1.14.0"
]
requires-python = ">=3.12"
authors = [
  {name = "Alejandro Ponce de León Chávez", email = "aponcedeleonch@gmail.com"},
]
description = ""
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/aponcedeleonch/nite"
Issues = "https://github.com/aponcedeleonch/nite/issues"

[project.scripts]
nite_video_mixer = "nite.cli.video_mixer:main"


[tool.hatch.envs.style]
detached = true
dependencies = [
  "ruff==0.9.3",
  "mypy==1.11.2",
  "types-pyaudio==0.2.16.20240516",
]

[tool.ruff.lint]
# F = [pyflakes](https://docs.astral.sh/ruff/rules/#pyflakes-f)
# E, W = [pycodestyle](https://docs.astral.sh/ruff/rules/#pycodestyle-e-w)
# I = [isort](https://docs.astral.sh/ruff/rules/#isort-i)
# N = [pep8-naming](https://docs.astral.sh/ruff/rules/#pep8-naming-n)
select = ["F", "E", "W", "I", "N"]

[tool.ruff]
line-length = 100

[tool.hatch.envs.style.scripts]
check = [
  "ruff check",
]
format = [
  "ruff format",
]
typecheck = [
  "mypy src",
]
