[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nite"
version = "0.0.1"
dependencies = [
  "pydantic==2.8.2",
  "opencv-python==4.10.0.84",
  "PyAudio==0.2.14",
  "librosa==0.10.2.post1",
  "numpy==2.1.3",
  "fastapi==0.115.8",
  "uvicorn==0.34.0",
  "alembic==1.14.1",
  "sqlalchemy==2.0.38",
  "aiosqlite==0.21.0",
  "greenlet==3.1.1",
  "structlog==25.1.0",
]
requires-python = ">=3.12"
authors = [
  {name = "Alejandro Ponce de León Chávez", email = "aponcedeleonch@gmail.com"},
]
description = ""
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]

[dependency-groups]
test = [
  "pytest==8.3.3",
  "pytest-asyncio==0.25.3",
  "pytest-cov>=6.0.0"
]
format = [
  "ruff==0.9.3"
]
typing = [
  "mypy==1.11.2",
  "types-pyaudio==0.2.16.20240516"
]

[project.urls]
Homepage = "https://github.com/aponcedeleonch/nite"
Issues = "https://github.com/aponcedeleonch/nite/issues"

[project.scripts]
nite_video_mixer = "nite.cli.video_mixer:main"
nite_web_openapi = "nite.api.v1:generate_openapi"

[tool.ruff.lint]
# F = [pyflakes](https://docs.astral.sh/ruff/rules/#pyflakes-f)
# E, W = [pycodestyle](https://docs.astral.sh/ruff/rules/#pycodestyle-e-w)
# I = [isort](https://docs.astral.sh/ruff/rules/#isort-i)
# N = [pep8-naming](https://docs.astral.sh/ruff/rules/#pep8-naming-n)
select = ["F", "E", "W", "I", "N"]

[tool.ruff]
line-length = 100

[tool.mypy]
plugins = ['pydantic.mypy']

[tool.pytest.ini_options]
addopts = "--cov=nite tests"
